tests/phpt/parse_errors/fail_func_param.php
@kphp_should_fail
/Syntax error: missing varname after typehint/
<?php

function f($x, string) {}
